--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # IntelliJ IDEA
 **/.idea/*
 !**/.idea/inspectionProfiles
+!**/.idea/codeStyles
 !**/.idea/codeStyleSettings.xml
 !**/.idea/misc.xml
 !**/.idea/saveactions_settings.xml
